<resources>
    <string name="app_name">HW3.2.CalculatorActions</string>
    <string name="btn_c">C</string>
    <string name="btn_sign">+/-</string>
    <string name="btn_percent">%</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiply">x</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_equal">=</string>
</resources>
