<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"

        />

    <LinearLayout
        android:id="@+id/actions_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOutput"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_alignLeft="">

        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_c" />

        <Button
            android:id="@+id/btnSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_sign" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_percent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/numberBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/actions_row"
        android:layout_alignParentStart="true"
        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_column"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOutput"
        android:layout_toEndOf="@id/actions_row"
        android:layout_alignParentRight="true"
        android:orientation="vertical"

        >

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtOutput"
            android:layout_toEndOf="@id/actions_row"
            android:text="@string/btn_divide" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_multiply" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_minus"
            />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_plus"/>

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_equal"


    </LinearLayout>


</RelativeLayout>